configuracion de la db

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,16 @@
-NODE_ENV=production
-PORT=3000
+NODE_ENV=development
+PORT=3001
 
 # DATABASE
-DB_USERNAME=null
-DB_PASSWORD=null
-DB_NAME=null
-DB_HOSTNAME=null
-DB_PORT=null
-
+DB_USERNAME=root
+DB_PASSWORD=password
+DB_NAME=sofiadb
+DB_HOSTNAME=localhost
+DB_PORT=3306
+FRONTEND_URL=http://localhost:9091/
+FRONTEND_URL=http://localhost:9092/
+FRONTEND_URL=http://localhost:9093/
+FRONTEND_URL=http://localhost:9094/
 # JWT KEY
 JWT_SECRET_KEY=null
 
@@ -18,4 +21,4 @@ MAIL_USER=null
 MAIL_PWD=null
 MAIL_FROM=null
 
-BACKEND_URL=http://localhost:3000/
+BACKEND_URL=http://localhost:3001/
