--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
       "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
   "[javascript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
+      "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
   "task.allowAutomaticTasks": "on",
   "eslint.format.enable": true,
